--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ archives_base_name=capturexp
 # Dependencies
 fabric_version=0.89.0+1.20.1
 fabric_kotlin_version=1.9.3+kotlin.1.8.20
-cobblemon_version=1.4.0+1.20.1-SNAPSHOT
+cobblemon_version=1.5.2+1.20.1
